--- a/Account-Generation.html
+++ b/Account-Generation.html
@@ -123,6 +123,7 @@
 						  <a class="dropdown-item" href="Secure-Crypto-Wallet.html">Secure Crypto Wallet</a>
 						  <a class="dropdown-item" href="keygard.html">Keycard</a>
 						  <a class="dropdown-item" href="Web3-Browser.html">Web3 Browser</a>
+						  <a class="dropdown-item" href="VPN.html">VPN</a>
 					  </div>
 				  </li>
 				  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
@@ -205,7 +206,7 @@
 				<div class="flex flex-col px-8 md:col-span-3 col-span-6 justify-center items-start md:pt-0 pt-32">
 					<h3 class="font-display text-4xl xl:text-5xl 2xl:text-6xl">Three-Word Default Usernames and Privacy</h3>
 					<p style="color: #fff;" class="text-gray-300 mt-12 text-xl font-display ">When generating an account, a randomization process selects three words – Adjective, adjective, animal. This becomes your default username in PCNP and results in true pseudo-anonymity.</p>
-					<a href="https://our.pcnp.io/usernames-in-the-status-messenger/" target="_blank" class="transition-all duration-200 linear group py-4 px-6 flex md:inline-flex justify-between items-center mt-12 border font-special font-semibold hover:bg-white hover:text-black rounded border-white text-lg">
+					<a href="https://our.pcnp.io/usernames-in-the-status-messenger/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white px-6 mt-12">
 						Learn More about PCNP Usernames
 						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
 					</a>
@@ -233,7 +234,7 @@
 					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl">Secure Key Generation</h3>
 					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl font-display">During the account generation process, a chat and wallet keypair will be generated via a BIP43 derived path from a BIP39 mnemonic seed phrase. Only you have access to the private keys so keep them safe.</p>
 					<div class="flex">
-						<a href="/faq/#keys-and-accounts" class="transition-all duration-200 linear group py-4 px-6 flex md:inline-flex justify-between items-center mt-12 border font-special font-semibold hover:bg-white hover:text-black  rounded border-black text-lg">
+						<a href="/faq/#keys-and-accounts" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white px-6 mt-12">
 							Learn More about Key Generation
 							<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
 						</a>
@@ -251,7 +252,7 @@
 					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl">State of Us Usernames with ENS</h3>
 					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl font-display">ENS stands for Ethereum Name Service, and allows Ethereum addresses to be replaced by custom text-based names. Anyone can register a stateofus.eth username by staking 10 PCNP from within the Profile Tab. <br><br>Its important to note, that when you register an ENS name with a given wallet address, that address is now associated with the username, reducing the privacy of that account.</p>
 					<div class="flex">
-						<a href="form.html" class="transition-all duration-200 linear group py-4 px-6 flex md:inline-flex justify-between items-center mt-12 border font-special font-semibold hover:bg-white hover:text-black rounded border-black text-lg">
+						<a  href="form.html" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white px-6 mt-12">
 							Register a State of Us Username
 							<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
 						</a>
@@ -274,7 +275,7 @@
 					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl">Protect your Account with Keycard</h3>
 					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl font-display">Add offline, hardware enforced two-factor-authentication to your PCNP account with Keycard. Require the tap of a card + pin entry for greater security over your account.</p>
 					<div class="flex">
-						<a href="/keycard-integration/" class="transition-all duration-200 linear group py-4 px-6 flex md:inline-flex justify-between items-center mt-12 border font-special font-semibold hover:bg-white hover:text-black rounded border-black text-lg">
+						<a href="/keycard-integration/" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white px-6 mt-12">
 							Get a Keycard
 							<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
 						</a>
