--- a/Private-messenger.html
+++ b/Private-messenger.html
@@ -119,6 +119,7 @@
                         <a class="dropdown-item" href="Secure-Crypto-Wallet.html">Secure Crypto Wallet</a>
                         <a class="dropdown-item" href="keygard.html">Keycard</a>
                         <a class="dropdown-item" href="Web3-Browser.html">Web3 Browser</a>
+                        <a class="dropdown-item" href="VPN.html">VPN</a>
                     </div>
                 </li>
                 <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
@@ -179,12 +180,7 @@
                                     Send private 1:1, group, and public chats. Easily send payments to friends around the world. Built with peer-to-peer technology to remove surveilling third parties. <br>  <br>
                                     Soon on
                                 </p>
-                                <div class="flex items-center -ml-12 mt-6">
-                                    <a src="https://apps.apple.com/us/app/PCNP-private-communication/id1178893006" target="_blank" rel="noopener" id="official:ios" class="ml-12 app-download"><img src="./theme-assets/images/app-store.svg"></a>
-                                    <a src="https://play.google.com/store/apps/details?id=im.PCNP.ethereum" target="_blank" rel="noopener" id="official:apk" class="ml-8 xs:ml-4 app-download"><img src="./theme-assets/images/google-play.svg"></a>
-                                    <a src="https://PCNP-im-files.ams3.cdn.digitaloceanspaces.com/PCNPIm-Mobile-v1.14.0-d1a3a2.apk" target="_blank" rel="noopener" id="official:apk" class="ml-8 xs:ml-4 app-download"><img src="./theme-assets/images/apk.svg"></a>
-                                    <a src="https://f-droid.org/packages/im.PCNP.ethereum/" target="_blank" rel="noopener" id="official:fdroid" class="ml-8 xs:ml-4 app-download"><img src="./theme-assets/images/fdroid.svg"></a>
-                                </div>
+                                
                             </div>
                             <div class="relative mt-24 md:mt-0">
                                 <div class="md:-mt-24 mx-auto -ml-12 -mr-12 md:ml-0 md:mr-0 flex justify-center items-center md:pt-20 relative">
@@ -250,17 +246,14 @@
 						<img src="./theme-assets/images/messenger-payments-2x.png" srcset="./theme-assets/images/messenger-payments-2x.png">
 					</div>
 					<h3 style="color: #fff;" class="font-display text-4xl mt-6 xl:text-5xl 2xl:text-6xl">Simple, Borderless Payments</h3>
-					<p style="color: #fff;" class="text-gray-600 mt-6 text-xl font-display font-medium leading-normal">Seamlessly integrated with the crypto wallet, PCNP enables anyone, anywhere to send global payments directly in a chat</p>
+					<p style="color: #fff;" class=" mt-6 text-xl font-display leading-normal">Seamlessly integrated with the crypto wallet, PCNP enables anyone, anywhere to send global payments directly in a chat</p>
 				</div>
 				<div class="px-8 mb-24 md:mb-0">
 					<div class="mx-auto flex justify-center items-center md:block pb-16 md:pt-48">
 					</div>
-					<h3 style="color: #fff;";" class="font-display text-4xl xl:text-5xl 2xl:text-6xl">Send, Create, & Earn with NFT's</h3>
-					<p style="color: #fff;" class=" mt-6 text-xl font-display font-medium leading-normal">Send expressive stickers without the middle men. Even create your own packs and earn PCNP in the decentralized NFT marketplace</p>
-					<a href="https://docs.google.com/forms/d/19itZB_V5bVW4cyV8a2ifDWHuQSr9V_dkVMCl6ARxOag/edit" target="_blank" class="inline-flex mt-6 items-center font-special font-semibold text-primary-base hover:text-primary-900 group">
-	                  	Submit Pack
-	                    <span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="./theme-assets/images/icon-arrow-right.svg"></span>
-                  	</a>
+					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl">Send, Create, & Earn with NFT's</h3>
+					<p style="color: #fff;" class=" mt-6 text-xl font-display leading-normal">Send expressive stickers without the middle men. Even create your own packs and earn PCNP in the decentralized NFT marketplace</p>
+					
 				</div>
 			</div>
 		</div>
@@ -309,10 +302,10 @@ Benefits -->
                 <h3 class="font-display text-4xl xl:text-5xl 2xl:text-6xl">Peer-to-Peer Messaging</h3>
                 <p style="color: #fff;" class="text-gray-300 mt-12 text-xl font-display  leading-normal">PCNP removes centralized choke points from your messages for greater privacy and security. Levering a peer-to-peer network instead of centralized servers for the routing of messages, your communication is yours and yours alone.</p>
                 <div class="flex">
-                    <a style="margin-left: -1px" href="https://our.PCNP.io/peer-to-peer-messaging-where-whisper-falls-short-and-waku-picks-up/" target="_blank" class="transition-all duration-200 linear group py-4 px-6 flex md:inline-flex justify-between items-center mt-12 border font-special font-semibold hover:bg-white hover:text-black rounded border-white text-lg ml-8">
-                        Learn More
-                        <span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="./theme-assets/images/icon-arrow-right-white.svg"></span>
-                    </a>
+                    <a style="margin-left: -1px;  margin-top: 20px;" href="https://our.PCNP.io/peer-to-peer-messaging-where-whisper-falls-short-and-waku-picks-up/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white">
+						Learn More
+						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
+					  </a>
                 </div>
             </div>
             <div class="px-8">
