--- a/Secure-Crypto-Wallet.html
+++ b/Secure-Crypto-Wallet.html
@@ -123,6 +123,7 @@
 						  <a class="dropdown-item" href="Secure-Crypto-Wallet.html">Secure Crypto Wallet</a>
 						  <a class="dropdown-item" href="keygard.html">Keycard</a>
 						  <a class="dropdown-item" href="Web3-Browser.html">Web3 Browser</a>
+						  <a class="dropdown-item" href="VPN.html">VPN</a>
 					  </div>
 				  </li>
 				  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
@@ -210,11 +211,12 @@
 				</div>
 				<div class="flex flex-col px-8 order-first md:order-last justify-center items-start md:pt-0 pt-32">
 					<h3 class="font-display text-4xl xl:text-5xl 2xl:text-6xl">Take Control of Your Funds</h3>
-					<p style="color: #fff;" class="text-gray-300 mt-12 text-xl font-display font-medium leading-normal">The PCNP Wallet is entirely non-custodial – only you have access to your funds. Not banks. Not even PCNP. Send, receive, and store ETH, PCNP, DAI, collectibles and other ethereum assets on your terms.</p>
-					<a href="https://our.PCNP.io/inside-the-non-custodial-wallet/" target="_blank" class="transition-all duration-200 linear group py-4 px-6 flex md:inline-flex justify-between items-center mt-12 border font-special font-semibold hover:bg-white hover:text-black rounded border-white text-lg">
+					<p style="color: #fff;" class="text-gray-300 mt-12 text-xl font-display leading-normal">The PCNP Wallet is entirely non-custodial – only you have access to your funds. Not banks. Not even PCNP. Send, receive, and store ETH, PCNP, DAI, collectibles and other ethereum assets on your terms.</p>
+
+					<a style="width: 150px; margin-top: 20px;" href="https://our.PCNP.io/inside-the-non-custodial-wallet/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white">
 						Learn More
 						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
-					</a>
+					  </a>
 				</div>
 			</div>
 		</div>
@@ -228,10 +230,10 @@
 					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl">Designed for Security</h3>
 					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl font-display  leading-normal">Protect your funds with the latest security standards, anti-phishing mechanisms, and locally generated and stored public and private keys. Trust your assets are safe with the PCNP Wallet.</p>
 					<div class="flex">
-						<a href="https://specs.PCNP.io/spec/2#initial-key-generation" target="_blank" class="transition-all duration-200 linear group py-4 px-6 flex md:inline-flex justify-between items-center mt-12 border font-special font-semibold hover:bg-white hover:text-black rounded border-white text-lg">
+						<a style="width: 180px; margin-top: 20px;" href="https://specs.PCNP.io/spec/2#initial-key-generation" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white">
 							View the Specs
 							<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
-						</a>
+						  </a>
 					</div>
 				</div>
 				<div class="px-8">
@@ -293,7 +295,7 @@
 						</div>
 						<div class="flex-1 mt-16 md:mt-32 order-first md:order-last">
 							<h3 style="color: #fff;" class="font-display text-4xl xl:text-6xl mt-4">Multiple Wallet Accounts for Greater Privacy</h3>
-							<p style="color: gray;" class="text-xl text-gray-300 mt-4">Create multiple accounts in your PCNP wallet. Select which account you use for interacting with DApps, sending payments, and storing funds.</p>
+							<p style="color: #fff;" class="text-xl text-gray-300 mt-4">Create multiple accounts in your PCNP wallet. Select which account you use for interacting with DApps, sending payments, and storing funds.</p>
 						</div>
 					</div>
 				</div>
@@ -301,7 +303,7 @@
 					<span class=" w-screen absolute -z-1 left-0 h-full"></span>
 					<div class="h-full px-8 py-32 md:p-32">
 						<h3 style="color: #fff;" class="font-display text-4xl xl:text-6xl mt-4">Hardware Security with Keycard</h3>
-						<p style="color: gray;" class="text-xl text-gray-700">Add a layer of security to your account and funds with Keycard - the contactless hardware wallet.</p>
+						<p style="color: #fff;" class="text-xl text-gray-700">Add a layer of security to your account and funds with Keycard - the contactless hardware wallet.</p>
 						<a style="width: 150px; margin-top: 20px;" href="https://get.keycard.tech/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white" style="width: 150px;">
 							Learn More
 							<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
