--- a/Web3-Browser.html
+++ b/Web3-Browser.html
@@ -68,18 +68,7 @@
             <stop offset="5%" stop-color="#28bcfd"></stop>
             <stop offset="100%" stop-color="#1d78ff"></stop>
         </linearGradient>        
-        <g>
-            <circle cx="256" cy="256" r="150" fill="none" stroke="url(#loaderLinearColors)" />
-        </g>
-        <g>
-            <circle cx="256" cy="256" r="125" fill="none" stroke="url(#loaderLinearColors)" />
-        </g>
-        <g>
-            <circle cx="256" cy="256" r="100" fill="none" stroke="url(#loaderLinearColors)" />
-        </g>
-        <g>
-            <circle cx="256" cy="256" r="75" fill="none" stroke="url(#loaderLinearColors)" />
-        </g>
+       
         <circle cx="256" cy="256" r="100" fill="url(#loaderImage)" stroke="none" stroke-width="0" />
 
         <!-- Change the preloader logo here -->
@@ -133,6 +122,7 @@
 						  <a class="dropdown-item" href="Secure-Crypto-Wallet.html">Secure Crypto Wallet</a>
 						  <a class="dropdown-item" href="keygard.html">Keycard</a>
 						  <a class="dropdown-item" href="Web3-Browser.html">Web3 Browser</a>
+						  <a class="dropdown-item" href="VPN.html">VPN</a>
 					  </div>
 				  </li>
 				  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
@@ -211,7 +201,7 @@
 				<div class="flex flex-col px-8 justify-center items-start md:pt-0 pt-32">
 					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl">Earn, Save, Exchange with Defi</h3>
 					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl font-display ">Access the growing ecosystem of decentralized financial tools and services all from your mobile phone.</p>
-					<a href="https://dap.ps/discover-dapps/categories/EXCHANGES" target="_blank" class="transition-all duration-200 linear group py-4 px-6 flex md:inline-flex justify-between items-center mt-12 border font-special font-semibold hover:bg-white hover:text-black rounded border-white text-lg">
+					<a href="https://dap.ps/discover-dapps/categories/EXCHANGES" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white mt-12">
 						Explore Defi DApps
 						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right.svg"></span>
 					</a>
@@ -237,7 +227,7 @@
 				<div class="flex flex-col justify-center lg:px-48 px-8 items-start md:pt-0 lg:pt-48 pt-12 order-first md:order-last">
 					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl">Games, Marketplaces and More</h3>
 					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl font-display">Play, collect, trade, and browse with all your favorite decentralized applications in one place.</p>
-					<a href="https://dap.ps/" target="_blank" class="transition-all duration-200 linear group py-4 px-6 flex md:inline-flex justify-between items-center mt-12 border font-special font-semibold hover:bg-blue-gray-light hover:text-black  rounded border-blacktext-lg">
+					<a href="https://dap.ps/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white mt-12">
 						See all DApps
 						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
 					</a>
@@ -253,10 +243,10 @@
 				<div class="flex flex-col justify-center lg:xl-48 px-8 items-start md:pt-0">
 					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl">Community Curated Discovery with Dap.ps</h3>
 					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl font-display ">Dap.ps is a third party dapp discovery solution that aims to create a fair, token curated dapp marketplace. Leveraging SNT and token economics, Dap.ps decentralizes the way we explore and find the latest DApps</p>
-					<a href="https://our.pcnp.io/how-to-curate-dapps-simply/" target="_blank" class="transition-all duration-200 linear group py-4 px-6 flex md:inline-flex justify-between items-center mt-12 border font-special font-semibold hover:bg-white hover:text-black rounded border-black text-lg">
+					<a style="margin-top: 20px" href="https://our.pcnp.io/how-to-curate-dapps-simply/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white">
 						Learn More
 						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
-					</a>
+					  </a>
 				</div>
 				<div class="mx-auto flex justify-end items-center lg:px-0 px-8">
 					<div class="mx-auto flex justify-end items-center">
@@ -274,7 +264,7 @@
 				<div class="flex flex-col justify-center md:col-start-3 md:col-span-4 lg:xl-48 px-8 items-center md:pt-0">
 					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl text-center">Want to submit your DApp to Dap.ps for the world to see?</h3>
 					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl text-center font-display">Follow the instructions at the DApp Integration Center</p>
-					<a href="/developer_tools/" target="_blank" class="transition-all duration-200 linear group py-4 px-6 flex md:inline-flex justify-between items-center mt-12 border font-special font-semibold hover:bg-white hover:text-black text-white rounded border-black bg text-lg">
+					<a href="/developer_tools/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white mt-12">
 						DApp Integration Center
 						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
 					</a>
