--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                           <a class="dropdown-item" href="Secure-Crypto-Wallet.html">Secure Crypto Wallet</a>
                           <a class="dropdown-item" href="keygard.html">Keycard</a>
                           <a class="dropdown-item" href="Web3-Browser.html">Web3 Browser</a>
+                          <a class="dropdown-item" href="VPN.html">VPN</a>
                       </div>
                   </li>
                   <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
