--- a/keygard.html
+++ b/keygard.html
@@ -125,6 +125,7 @@
                           <a class="dropdown-item" href="Secure-Crypto-Wallet.html">Secure Crypto Wallet</a>
                           <a class="dropdown-item" href="keygard.html">Keycard</a>
                           <a class="dropdown-item" href="Web3-Browser.html">Web3 Browser</a>
+                          <a class="dropdown-item" href="VPN.html">VPN</a>
                       </div>
                   </li>
                   <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
@@ -207,10 +208,10 @@
                         <h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl">What is Keycard?</h3>
                         <p style="color: #fff;" class="text-xl 2xl :text-2xl mt-12 text-gray-700">Keycard is a cold storage hardware wallet designed to keep your private keys entirely offline for greater security over your funds. <br><br>Built with NFC technology and a credit card-like design for a seamless, contactless experience. Built with an open API for integration with third party crypto wallets, DApps, and hardware.</p>
                         <div class="flex flex-col md:flex-row items-center flex-wrap mt-12">
-                <a href="https://keycard.tech/" target="_blank" class="flex w-full md:w-auto py-4 px-6 md:inline-flex items-center group border font-special transition-all duration-200 linear font-semibold hover:bg-black hover:text-white rounded border-black text-lg">
-                  Learn More
-                  <span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right.svg"></span>
-                </a>
+                            <a href="https://keycard.tech/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white">
+                                Learn More
+                                <span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
+                              </a>
                 <a href="https://get.keycard.tech/" target="_blank" class="mt-8 w-full md:w-auto md:mt-0 text-lg flex md:inline-flex items-center group font-special transition-all duration-200 linear py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white md:ml-8">
                   Get a Keycard €24.9
                   <span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right.svg"></span>
@@ -380,10 +381,10 @@
         <section class="keycard-faq  py-40 mt-20 lg:mt-40">
             <div class="max-w-screen-2xl mx-auto px-8 lg:px-20 text-center">
                   <h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl">Do you have questions?</h3>
-                  <a style="color: #fff;" href="/faq/#keycard" class="py-4 px-6 inline-flex items-center group transition-all duration-200 linear border font-special font-semibold hover:bg-black hover:text-white rounded border-black text-lg mt-8">
-              Learn More
-              <span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right.svg"></span>
-            </a>
+                  <a style="margin-top: 20px;" href="/faq/#keycard" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white">
+                    Learn More
+                    <span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
+                  </a>
             </div>
         </section>
     
