--- a/Secure-Crypto-Wallet.html
+++ b/Secure-Crypto-Wallet.html
@@ -175,16 +175,16 @@
 			<div class="grid md:grid-cols-2">
 				<div class="relative px-8 self-center xl:mb-32">
 					<span class="w-screen absolute -z-1 right-0 h-full"></span>
-					<h1 style="color: #fff;" class="leading-tight font-display text-6xl xl:text-7xl 2xl:text-8xl">A Crypto Super Wallet</h1>
-					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl 2xl:text-4xl font-display font-normal leading-normal">
+					<h1 style="color: #fff;" class="leading-tight font-display text-6xl xl:text-7xl 2xl:text-8xl animated" data-animation="fadeInUpShorter" data-animation-delay="1.2s">A Crypto Super Wallet</h1>
+					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl 2xl:text-4xl font-display font-normal leading-normal animated" data-animation="fadeInUpShorter" data-animation-delay="1.5s">
 						With the secure, non-custodial PCNP Wallet, you are in complete control of your funds. <br> 
 						<br> Soon on
 					</p>
 					<div class="flex items-center -ml-12 mt-12">
-						<a src="https://apps.apple.com/us/app/PCNP-private-communication/id1178893006" target="_blank" rel="noopener" id="official:ios" class="ml-12 app-download"><img src="theme-assets/images/app-store.svg"></a>
-						<a src="https://play.google.com/store/apps/details?id=im.PCNP.ethereum" target="_blank" rel="noopener" id="official:apk" class="ml-8 xs:ml-4 app-download"><img src="theme-assets/images/google-play.svg"></a>
-						<a src="https://PCNP-im-files.ams3.cdn.digitaloceanspaces.com/PCNPIm-Mobile-v1.14.0-d1a3a2.apk" target="_blank" rel="noopener" id="official:apk" class="ml-8 xs:ml-4 app-download"><img src="theme-assets/images/apk.svg"></a>
-						<a src="https://f-droid.org/packages/im.PCNP.ethereum/" target="_blank" rel="noopener" id="official:fdroid" class="ml-8 xs:ml-4 app-download"><img src="theme-assets/images/fdroid.svg"></a>
+						<a src="https://apps.apple.com/us/app/PCNP-private-communication/id1178893006" target="_blank" rel="noopener" id="official:ios" class="ml-12 app-download animated" data-animation="fadeInUpShorter" data-animation-delay="1.5s"><img src="theme-assets/images/app-store.svg"></a>
+						<a src="https://play.google.com/store/apps/details?id=im.PCNP.ethereum" target="_blank" rel="noopener" id="official:apk" class="ml-8 xs:ml-4 app-download animated" data-animation="fadeInUpShorter" data-animation-delay="1.5s"><img src="theme-assets/images/google-play.svg"></a>
+						<a src="https://PCNP-im-files.ams3.cdn.digitaloceanspaces.com/PCNPIm-Mobile-v1.14.0-d1a3a2.apk" target="_blank" rel="noopener" id="official:apk" class="ml-8 xs:ml-4 app-download animated" data-animation="fadeInUpShorter" data-animation-delay="1.5s"><img src="theme-assets/images/apk.svg"></a>
+						<a src="https://f-droid.org/packages/im.PCNP.ethereum/" target="_blank" rel="noopener" id="official:fdroid" class="ml-8 xs:ml-4 app-download animated" data-animation="fadeInUpShorter" data-animation-delay="1.5s"><img src="theme-assets/images/fdroid.svg"></a>
 					</div>
 				</div>
 				<div class="relative mt-24 md:mt-0">
@@ -193,7 +193,7 @@
 							<source src="/video/wallet-intro.webm" type="video/webm">
 							<source src="/video/wallet-intro.mp4" type="video/mp4">
 						</video>
-						<img src="theme-assets/images/wallet-intro-2x.png"  class="md:hidden">
+						<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.6s" src="theme-assets/images/wallet-intro-2x.png"  class="md:hidden">
 					</div>
 				</div>
 			</div>
@@ -206,14 +206,14 @@
 			<div class="grid md:grid-cols-2 gap-24">
 				<div class="px-8">
 					<div class="mx-auto flex justify-center items-center md:block md:py-48 pb-12">
-						<img src="theme-assets/images/pcnp1112 - Copy.png">
+						<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" src="theme-assets/images/pcnp1112 - Copy.png">
 					</div>
 				</div>
 				<div class="flex flex-col px-8 order-first md:order-last justify-center items-start md:pt-0 pt-32">
-					<h3 class="font-display text-4xl xl:text-5xl 2xl:text-6xl">Take Control of Your Funds</h3>
-					<p style="color: #fff;" class="text-gray-300 mt-12 text-xl font-display leading-normal">The PCNP Wallet is entirely non-custodial – only you have access to your funds. Not banks. Not even PCNP. Send, receive, and store ETH, PCNP, DAI, collectibles and other ethereum assets on your terms.</p>
+					<h3 class="font-display text-4xl xl:text-5xl 2xl:text-6xl animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Take Control of Your Funds</h3>
+					<p style="color: #fff;" class="text-gray-300 mt-12 text-xl font-display leading-normal animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">The PCNP Wallet is entirely non-custodial – only you have access to your funds. Not banks. Not even PCNP. Send, receive, and store ETH, PCNP, DAI, collectibles and other ethereum assets on your terms.</p>
 
-					<a style="width: 150px; margin-top: 20px;" href="https://our.PCNP.io/inside-the-non-custodial-wallet/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white">
+					<a style="width: 150px; margin-top: 20px;" href="https://our.PCNP.io/inside-the-non-custodial-wallet/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
 						Learn More
 						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
 					  </a>
@@ -227,10 +227,10 @@
 		<div class="max-w-screen-2xl mx-auto lg:px-12">
 			<div class="grid md:grid-cols-2 gap-24">
 				<div class="flex flex-col px-8 justify-center items-start md:pt-0 pt-32">
-					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl">Designed for Security</h3>
-					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl font-display  leading-normal">Protect your funds with the latest security standards, anti-phishing mechanisms, and locally generated and stored public and private keys. Trust your assets are safe with the PCNP Wallet.</p>
+					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Designed for Security</h3>
+					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl font-display  leading-normal animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Protect your funds with the latest security standards, anti-phishing mechanisms, and locally generated and stored public and private keys. Trust your assets are safe with the PCNP Wallet.</p>
 					<div class="flex">
-						<a style="width: 180px; margin-top: 20px;" href="https://specs.PCNP.io/spec/2#initial-key-generation" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white">
+						<a style="width: 180px; margin-top: 20px;" href="https://specs.PCNP.io/spec/2#initial-key-generation" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
 							View the Specs
 							<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
 						  </a>
@@ -238,7 +238,7 @@
 				</div>
 				<div class="px-8">
 					<div class="mx-auto flex justify-center items-center md:block pb-32 md:py-48">
-						<img src="theme-assets/images/wallet-security-2x.png" srcset="./theme-assets/images/wallet-security-2x.png 2x">
+						<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" src="theme-assets/images/wallet-security-2x.png" srcset="./theme-assets/images/wallet-security-2x.png 2x">
 					</div>
 				</div>
 			</div>
@@ -254,10 +254,10 @@
 					<div class="h-full px-8 py-32 md:p-32 lg:pr-64 lg:pl-8">
 						<div class="row">
 							<div class="col-md-11 flex flex-col col-lg-10">
-								<img src="theme-assets/images/wallet-payments-2x.png">
+								<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" src="theme-assets/images/wallet-payments-2x.png">
 								<div class="order-first md:order-last mb-16 md:mb-0">
-									<h3 style="color: #fff;" class="font-display text-4xl xl:text-6xl mt-4 md:mt-24">Simple, Borderless Payments</h3>
-									<p style="color: #fff;" class="text-xl mt-4">Seamlessly integrated with the private messenger, send and receive payments to and from anyone, anywhere in the world.</p>
+									<h3 style="color: #fff;" class="font-display text-4xl xl:text-6xl mt-4 md:mt-24 animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Simple, Borderless Payments</h3>
+									<p style="color: #fff;" class="text-xl mt-4 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Seamlessly integrated with the private messenger, send and receive payments to and from anyone, anywhere in the world.</p>
 								</div>
 							</div>
 						</div>
@@ -267,15 +267,15 @@
 					<span class="w-screen absolute -z-1 left-0 h-full"></span>
 					<div class="h-full flex flex-col space-between px-8 py-32 md:p-32 text-white">
 						<div class="flex-1">
-							<h3 class="font-display text-4xl xl:text-6xl mt-4">Defi & More at Your Fingertips</h3>
-							<p style="color: #fff;" class="text-xl mt-4 text-gray-300">Access and interact with the growing world of web3 dapps with the integrated wallet and web3 browser.</p>
-							<a style="width: 150px; margin-top: 20px;" href="https://dap.ps/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white" style="width: 150px;">
+							<h3 class="font-display text-4xl xl:text-6xl mt-4 animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Defi & More at Your Fingertips</h3>
+							<p style="color: #fff;" class="text-xl mt-4 text-gray-300 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Access and interact with the growing world of web3 dapps with the integrated wallet and web3 browser.</p>
+							<a style="width: 150px; margin-top: 20px;" href="https://dap.ps/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="width: 150px;">
 								Learn More
 								<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
 							  </a>
 						</div>
 						<div class="mt-20 order-1 md:order-none -ml-8 -mr-8 md:mx-0 mb-12 md:mb-0 md:mt-48">
-							<img src="theme-assets/images/wallet-dapps-2x.png" srcset="./theme-assets/images/wallet-dapps-2x.png 2x" class="md:-ml-32 w-screen-2 w-screen">
+							<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" src="theme-assets/images/wallet-dapps-2x.png" srcset="./theme-assets/images/wallet-dapps-2x.png 2x" class="md:-ml-32 w-screen-2 w-screen">
 						</div>
 					</div>
 				</div>
@@ -291,24 +291,24 @@
 					<span class="w-screen absolute -z-1 right-0 h-full"></span>
 					<div class="h-full px-8 md:p-32 lg:pr-64 lg:pl-8 text-white flex flex-col space-between">
 						<div class="mt-12 mb-32 md:mb-0">
-							<img src="theme-assets/images/wallet-accounts.svg">
+							<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" src="theme-assets/images/wallet-accounts.svg">
 						</div>
 						<div class="flex-1 mt-16 md:mt-32 order-first md:order-last">
-							<h3 style="color: #fff;" class="font-display text-4xl xl:text-6xl mt-4">Multiple Wallet Accounts for Greater Privacy</h3>
-							<p style="color: #fff;" class="text-xl text-gray-300 mt-4">Create multiple accounts in your PCNP wallet. Select which account you use for interacting with DApps, sending payments, and storing funds.</p>
+							<h3 style="color: #fff;" class="font-display text-4xl xl:text-6xl mt-4 animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Multiple Wallet Accounts for Greater Privacy</h3>
+							<p style="color: #fff;" class="text-xl text-gray-300 mt-4 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Create multiple accounts in your PCNP wallet. Select which account you use for interacting with DApps, sending payments, and storing funds.</p>
 						</div>
 					</div>
 				</div>
 				<div class="relative order-1 md:order-none">
 					<span class=" w-screen absolute -z-1 left-0 h-full"></span>
 					<div class="h-full px-8 py-32 md:p-32">
-						<h3 style="color: #fff;" class="font-display text-4xl xl:text-6xl mt-4">Hardware Security with Keycard</h3>
-						<p style="color: #fff;" class="text-xl text-gray-700">Add a layer of security to your account and funds with Keycard - the contactless hardware wallet.</p>
-						<a style="width: 150px; margin-top: 20px;" href="https://get.keycard.tech/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white" style="width: 150px;">
+						<h3 style="color: #fff;" class="font-display text-4xl xl:text-6xl mt-4 animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Hardware Security with Keycard</h3>
+						<p style="color: #fff;" class="text-xl text-gray-700 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Add a layer of security to your account and funds with Keycard - the contactless hardware wallet.</p>
+						<a style="width: 150px; margin-top: 20px;" href="https://get.keycard.tech/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="width: 150px;">
 							Learn More
 							<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
 						  </a>
-						<img src="theme-assets/images/wallet-keycard-2x.png" srcset="./theme-assets/images/wallet-keycard-2x.png 2x" class="-mb-32 mt-32">
+						<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" src="theme-assets/images/wallet-keycard-2x.png" srcset="./theme-assets/images/wallet-keycard-2x.png 2x" class="-mb-32 mt-32">
 					</div>
 				</div>
 			</div>
@@ -320,8 +320,8 @@
 		<div class="max-w-screen-2xl mx-auto lg:py-48 lg:px-20">
 			<div class="grid md:grid-cols-1">
 				<div class="flex flex-col justify-center text-white lg:xl-48 px-8 items-center py-32">
-					<h3 class="font-display text-4xl xl:text-5xl 2xl:text-6xl text-center">Have Questions? Check out the FAQ</h3>
-					<a href="/faq/#wallet" target="_blank" class="group inline-flex group items-center text-white font-semibold font-special mt-12">
+					<h3 class="font-display text-4xl xl:text-5xl 2xl:text-6xl text-center animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Have Questions? Check out the FAQ</h3>
+					<a href="/faq/#wallet" target="_blank" class="group inline-flex group items-center text-white font-semibold font-special mt-12 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
 						Frequently Asked Questions
 						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="./theme-assets/images/icon-arrow-right-white.svg"></span>
 					</a>
@@ -341,7 +341,7 @@
 				<div class="col-md-4">
 					<div class="about">
 						<div class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">
-							<img style="width: 65px; height: 55px; margin-left: -20px; margin-bottom: 8px;" src="theme-assets/images/pcn0- Copy.png" alt="Logo">
+							<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="width: 65px; height: 55px; margin-left: -20px; margin-bottom: 8px;" src="theme-assets/images/pcn0- Copy.png" alt="Logo">
 							<p style="margin-left: 45px; margin-top: -50px; color: #fff; font-size: 1.9rem !important;" class="logo-text">PCN Protocol</p>
 						</div>
 						<div class="about-text animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">
