--- a/Web3-Browser.html
+++ b/Web3-Browser.html
@@ -174,11 +174,11 @@
 			<div class="grid md:grid-cols-2">
 				<div class="relative px-8 self-center xl:mb-32">
 					<span class="w-screen absolute -z-1 right-0 h-full"></span>
-					<h1 style="color: #fff;" class="leading-tight font-display text-6xl xl:text-7xl 2xl:text-8xl">Private & Secure Web3 Browser With Free VPN Service</h1>
-					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl 2xl:text-4xl font-display font-normal leading-normal">
+					<h1 style="color: #fff;" class="leading-tight font-display text-6xl xl:text-7xl 2xl:text-8xl animated" data-animation="fadeInUpShorter" data-animation-delay="1s">Private & Secure Web3 Browser With Free VPN Service</h1>
+					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl 2xl:text-4xl font-display font-normal leading-normal animated" data-animation="fadeInUpShorter" data-animation-delay="1.2s">
 						Access the latest defi dapps, exchanges, marketplaces, games and more with the Web3 Browser <br>   <br> Soon on
 					</p>
-					<div class="flex items-center -ml-12 mt-12">
+					<div class="flex items-center -ml-12 mt-12 animated" data-animation="fadeInUpShorter" data-animation-delay="1.2s">
 						<a src="https://apps.apple.com/us/app/PCNP-private-communication/id1178893006" target="_blank" rel="noopener" id="official:ios" class="ml-12 app-download"><img src="theme-assets/images/app-store.svg"></a>
 						<a src="https://play.google.com/store/apps/details?id=im.PCNP.ethereum" target="_blank" rel="noopener" id="official:apk" class="ml-8 xs:ml-4 app-download"><img src="theme-assets/images/google-play.svg"></a>
 						<a src="https://PCNP-im-files.ams3.cdn.digitaloceanspaces.com/PCNPIm-Mobile-v1.14.0-d1a3a2.apk" target="_blank" rel="noopener" id="official:apk" class="ml-8 xs:ml-4 app-download"><img src="theme-assets/images/apk.svg"></a>
@@ -187,7 +187,7 @@
 				</div>
 				<div class="relative mt-24 md:mt-0">
 					<div class="md:-mt-24 mx-auto flex justify-center items-center md:block md:pt-20">
-						<img  src="theme-assets/images/pcn0- Copy.png">
+						<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="1.2s"  src="theme-assets/images/pcn0- Copy.png">
 					</div>
 				</div>
 			</div>
@@ -199,16 +199,16 @@
 		<div class="max-w-screen-2xl mx-auto lg:px-12">
 			<div class="grid md:grid-cols-2 gap-24">
 				<div class="flex flex-col px-8 justify-center items-start md:pt-0 pt-32">
-					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl">Earn, Save, Exchange with Defi</h3>
-					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl font-display ">Access the growing ecosystem of decentralized financial tools and services all from your mobile phone.</p>
-					<a href="https://dap.ps/discover-dapps/categories/EXCHANGES" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white mt-12">
+					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Earn, Save, Exchange with Defi</h3>
+					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl font-display animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Access the growing ecosystem of decentralized financial tools and services all from your mobile phone.</p>
+					<a href="https://dap.ps/discover-dapps/categories/EXCHANGES" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white mt-12 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
 						Explore Defi DApps
 						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right.svg"></span>
 					</a>
 				</div>
 				<div class="px-8">
 					<div class="mx-auto flex justify-center items-center md:block md:pt-20">
-						<img src="theme-assets/images/browser-defi-2x.png">
+						<img  class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" src="theme-assets/images/browser-defi-2x.png">
 					</div>
 				</div>
 			</div>
@@ -221,13 +221,13 @@
 			<div class="grid md:grid-cols-2 gap-24">
 				<div>
 					<div class="mx-auto flex justify-center items-center md:block lg:pt-48">
-						<img src="theme-assets/images/browser-games.svg">
+						<img  class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s" src="theme-assets/images/browser-games.svg">
 					</div>
 				</div>
 				<div class="flex flex-col justify-center lg:px-48 px-8 items-start md:pt-0 lg:pt-48 pt-12 order-first md:order-last">
-					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl">Games, Marketplaces and More</h3>
-					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl font-display">Play, collect, trade, and browse with all your favorite decentralized applications in one place.</p>
-					<a href="https://dap.ps/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white mt-12">
+					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Games, Marketplaces and More</h3>
+					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl font-display animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Play, collect, trade, and browse with all your favorite decentralized applications in one place.</p>
+					<a href="https://dap.ps/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white mt-12 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
 						See all DApps
 						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
 					</a>
@@ -241,16 +241,16 @@
 		<div class="max-w-screen-2xl mx-auto lg:px-12 pb-24 lg:pb-64">
 			<div class="grid md:grid-cols-2 gap-24 lg:pt-48 pt-16">
 				<div class="flex flex-col justify-center lg:xl-48 px-8 items-start md:pt-0">
-					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl">Community Curated Discovery with Dap.ps</h3>
-					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl font-display ">Dap.ps is a third party dapp discovery solution that aims to create a fair, token curated dapp marketplace. Leveraging SNT and token economics, Dap.ps decentralizes the way we explore and find the latest DApps</p>
-					<a style="margin-top: 20px" href="https://our.pcnp.io/how-to-curate-dapps-simply/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white">
+					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s" >Community Curated Discovery with Dap.ps</h3>
+					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl font-display animated" data-animation="fadeInUpShorter" data-animation-delay="0.7s">Dap.ps is a third party dapp discovery solution that aims to create a fair, token curated dapp marketplace. Leveraging SNT and token economics, Dap.ps decentralizes the way we explore and find the latest DApps</p>
+					<a style="margin-top: 20px" href="https://our.pcnp.io/how-to-curate-dapps-simply/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white animated" data-animation="fadeInUpShorter" data-animation-delay="0.7s">
 						Learn More
 						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
 					  </a>
 				</div>
 				<div class="mx-auto flex justify-end items-center lg:px-0 px-8">
 					<div class="mx-auto flex justify-end items-center">
-						<img src="theme-assets/images/browser-community.svg">
+						<img  class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" src="theme-assets/images/browser-community.svg">
 					</div>
 				</div>
 			</div>
@@ -262,11 +262,11 @@
 		<div class="max-w-screen-2xl mx-auto lg:px-12 ">
 			<div class="grid md:grid-cols-8 lg:pt-48 pt-32">
 				<div class="flex flex-col justify-center md:col-start-3 md:col-span-4 lg:xl-48 px-8 items-center md:pt-0">
-					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl text-center">Want to submit your DApp to Dap.ps for the world to see?</h3>
-					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl text-center font-display">Follow the instructions at the DApp Integration Center</p>
-					<a href="/developer_tools/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white mt-12">
+					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl text-center animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Want to submit your DApp to Dap.ps for the world to see?</h3>
+					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl text-center font-display animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Follow the instructions at the DApp Integration Center</p>
+					<a href="/developer_tools/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white mt-12 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
 						DApp Integration Center
-						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
+						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img  class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.7s" src="theme-assets/images/icon-arrow-right-white.svg"></span>
 					</a>
 				</div>
 			</div>
@@ -286,8 +286,8 @@
 		<div class="max-w-screen-2xl mx-auto lg:py-48 lg:px-20">
 			<div class="grid md:grid-cols-1">
 				<div class="flex flex-col justify-center text-white lg:xl-48 px-8 items-center py-32">
-					<h3 class="font-display text-4xl xl:text-5xl 2xl:text-6xl text-center">Have Questions? Check out the FAQ</h3>
-					<a href="/faq/#browser" target="_blank" class="group inline-flex group items-center  font-semibold font-special mt-12">
+					<h3 class="font-display text-4xl xl:text-5xl 2xl:text-6xl text-center animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Have Questions? Check out the FAQ</h3>
+					<a href="/faq/#browser" target="_blank" class="group inline-flex group items-center  font-semibold font-special mt-12 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
 						Frequently Asked Questions
 						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
 					</a>
