--- a/keygard.html
+++ b/keygard.html
@@ -176,16 +176,16 @@
             <div class="max-w-screen-2xl mx-auto px-8 lg:px-20">
                 <div class="grid grid-cols-12 gap-12">
                     <div class="col-span-12 lg:col-span-7">
-                        <h1 style="color: #fff;" class="leading-tight font-display text-6xl xl:text-7xl 2xl:text-8xl">Add Hardware Security to Your PCNP Experience</h1>
-                        <p style="color: #fff;" class="text-gray-600 mt-12 text-xl 2xl:text-4xl font-display font-normal leading-normal">Protect your assets and accounts with Keycard - the cold storage hardware wallet with a contactless, convenient experience.</p>
-              <a style="width: 220px; margin-left: -1px;" href="https://get.keycard.tech/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white mt-16">
+                        <h1 style="color: #fff;" class="leading-tight font-display text-6xl xl:text-7xl 2xl:text-8xl animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Add Hardware Security to Your PCNP Experience</h1>
+                        <p style="color: #fff;" class="text-gray-600 mt-12 text-xl 2xl:text-4xl font-display font-normal leading-normal animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Protect your assets and accounts with Keycard - the cold storage hardware wallet with a contactless, convenient experience.</p>
+              <a style="width: 220px; margin-left: -1px;" href="https://get.keycard.tech/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white mt-16 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
                 Get a Keycard €24.9
                 <span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right.svg"></span>
               </a>
                     </div>
                     <div class="col-span-12 lg:col-span-5">
                         <div class="keycard-animate-1">
-                            <img src="theme-assets/images/keycard-intro-phone-2x.png" srcset="theme-assets/images/keycard-intro-phone-2x.png 2x" class="phone">
+                            <img  src="theme-assets/images/keycard-intro-phone-2x.png" srcset="theme-assets/images/keycard-intro-phone-2x.png 2x" class="phone">
                             <img src="theme-assets/images/keycard-intro-card-2x.png" srcset="theme-assets/images/keycard-intro-card-2x.png 2x" class="card">
                             <div class="circles"></div>
                         </div>
@@ -205,14 +205,14 @@
                         </div>
                     </div>
                     <div class="col-span-7 lg:col-span-3">
-                        <h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl">What is Keycard?</h3>
-                        <p style="color: #fff;" class="text-xl 2xl :text-2xl mt-12 text-gray-700">Keycard is a cold storage hardware wallet designed to keep your private keys entirely offline for greater security over your funds. <br><br>Built with NFC technology and a credit card-like design for a seamless, contactless experience. Built with an open API for integration with third party crypto wallets, DApps, and hardware.</p>
+                        <h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">What is Keycard?</h3>
+                        <p style="color: #fff;" class="text-xl 2xl :text-2xl mt-12 text-gray-700 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Keycard is a cold storage hardware wallet designed to keep your private keys entirely offline for greater security over your funds. <br><br>Built with NFC technology and a credit card-like design for a seamless, contactless experience. Built with an open API for integration with third party crypto wallets, DApps, and hardware.</p>
                         <div class="flex flex-col md:flex-row items-center flex-wrap mt-12">
-                            <a href="https://keycard.tech/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white">
+                            <a href="https://keycard.tech/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
                                 Learn More
                                 <span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
                               </a>
-                <a href="https://get.keycard.tech/" target="_blank" class="mt-8 w-full md:w-auto md:mt-0 text-lg flex md:inline-flex items-center group font-special transition-all duration-200 linear py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white md:ml-8">
+                <a href="https://get.keycard.tech/" target="_blank" class="mt-8 w-full md:w-auto md:mt-0 text-lg flex md:inline-flex items-center group font-special transition-all duration-200 linear py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white md:ml-8 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
                   Get a Keycard €24.9
                   <span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right.svg"></span>
                 </a>
@@ -224,11 +224,11 @@
     
         <section class="keycard-secure mt-20 lg:mt-64">
             <div class="max-w-screen-2xl mx-auto px-8 lg:px-20">
-                <h2 style="color: #fff;" class="font-display text-4xl xl:text-7xl text-center">Securing PCNP with Keycard</h2>
+                <h2 style="color: #fff;" class="font-display text-4xl xl:text-7xl text-center animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Securing PCNP with Keycard</h2>
                 <div class="grid md:grid-cols-2 gap-32 mt-40">
                     <div class="md:pl-32">
-                        <h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl">Greater Security for Your Assets and Transactions</h3>
-                        <p style="color: #fff;" class="text-lg 2xl:text-2xl mt-12">With private keys stored offline on your Keycard, add hardware-enforced authorizations to your transactions. Even if your phone is stolen, your funds will be safe.</p>
+                        <h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl animated" data-animation="fadeInUpShorter" data-animation-delay="0.7s">Greater Security for Your Assets and Transactions</h3>
+                        <p style="color: #fff;" class="text-lg 2xl:text-2xl mt-12 animated" data-animation="fadeInUpShorter" data-animation-delay="0.8s">With private keys stored offline on your Keycard, add hardware-enforced authorizations to your transactions. Even if your phone is stolen, your funds will be safe.</p>
                     </div>
                     <div>
                         <div class="keycard-animate-3" data-step="1">
@@ -337,8 +337,8 @@
                         </div>
                     </div>
                     <div class="md:pr-32 order-1 lg:order-none">
-                        <h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl">Protect Access to Your Accounts</h3>
-                        <p class="text-lg 2xl:text-2xl mt-12">Add greater security and require Keycard + PIN entry as two-factor authentication to access your accounts with PCNP.</p>
+                        <h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Protect Access to Your Accounts</h3>
+                        <p style="color: #fff;" class="text-lg 2xl:text-2xl mt-12 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Add greater security and require Keycard + PIN entry as two-factor authentication to access your accounts with PCNP.</p>
                     </div>
                 </div>
             </div>
@@ -348,20 +348,20 @@
             <div class="max-w-screen-2xl mx-auto px-8 lg:px-20">
                 <div class="grid lg:grid-cols-3 gap-12">
                     <div class="p-8 lg:p-16 text-white">
-                        <h3 class="text-2xl flex items-center">
+                        <h3  class="text-2xl flex items-center animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">
                           <img src="theme-assets/images/autonomy-and-confidence.svg" class="mr-12"> 
                           Autonomy and Confidence
                         </h3>
-                        <p class="mt-12 text-gray-200">PCNP removes unnecessary third parties such as banks to communicate and transact. By removing these services, people are now responsible for themselves and funds. Kecyard provides the security to operate confidently without them.</p>
+                        <p class="mt-12 text-gray-200 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">PCNP removes unnecessary third parties such as banks to communicate and transact. By removing these services, people are now responsible for themselves and funds. Kecyard provides the security to operate confidently without them.</p>
                     </div>
                     <div class="p-8 lg:p-16 text-white">
-                        <h3 class="text-2xl flex items-center">
+                        <h3 class="text-2xl flex items-center animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">
                           <img src="theme-assets/images/mobile-first.svg" class="mr-12"> 
                           A Mobile-first Design
                         </h3>
-                        <p class="mt-12 text-gray-200">Built with contactless NFC technology and a sleek, familiar design, Keycard provides the convenience of a credit card with the security of a hardware wallet.</p>
+                        <p class="mt-12 text-gray-200 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Built with contactless NFC technology and a sleek, familiar design, Keycard provides the convenience of a credit card with the security of a hardware wallet.</p>
                     </div>
-                    <a href="https://get.keycard.tech/" target="_blank" class="group  p-8 lg:p-16 text-white hover:bg-primary-base transition-bg duration-200 linear">
+                    <a href="https://get.keycard.tech/" target="_blank" class="group  p-8 lg:p-16 text-white hover:bg-primary-base transition-bg duration-200 linear animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">
                       <h3 class="text-2xl flex items-center">
                         <img src="theme-assets/images/affordable-security.svg" class="mr-12"> 
                         Affordable Security
@@ -380,8 +380,8 @@
     
         <section class="keycard-faq  py-40 mt-20 lg:mt-40">
             <div class="max-w-screen-2xl mx-auto px-8 lg:px-20 text-center">
-                  <h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl">Do you have questions?</h3>
-                  <a style="margin-top: 20px;" href="/faq/#keycard" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white">
+                  <h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Do you have questions?</h3>
+                  <a style="margin-top: 20px;" href="/faq/#keycard" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
                     Learn More
                     <span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
                   </a>
