--- a/faq.html
+++ b/faq.html
@@ -88,6 +88,9 @@
                       </div>
                   </li>
                   <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
+                    <a class="nav-link" href="security.html">Security</a>
+                </li>
+                  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
                       <a class="nav-link" href="index.html#whitepaper">Whitepaper</a>
                   </li>
                   <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.4s">
