--- a/Secure-Crypto-Wallet.html
+++ b/Secure-Crypto-Wallet.html
@@ -105,7 +105,7 @@
 	<header class="page-header">
 		<!-- Horizontal Menu Start-->
 		<nav class="main-menu static-top navbar-dark navbar navbar-expand-lg fixed-top mb-1"><div class="container">
-	  <a class="navbar-brand animated" data-animation="fadeInDown" data-animation-delay="1s" href="index.html"><img style="width: 160px; height: 70px;" src="theme-assets/images/pcnp1112 - Copy.png" alt="Pcnprotocol Logo"/></a>
+	  <a class="navbar-brand animated" data-animation="fadeInDown" data-animation-delay="1s" href="index.html"><img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="width: 160px; height: 70px;" src="theme-assets/images/pcnp1112 - Copy.png" alt="Pcnprotocol Logo"/></a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -126,6 +126,9 @@
 						  <a class="dropdown-item" href="VPN.html">VPN</a>
 					  </div>
 				  </li>
+				  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
+                    <a class="nav-link" href="security.html">Security</a>
+                </li>
 				  <li class="nav-item animated" data-animation="fadeInDown" data-animation-delay="1.3s">
 					  <a class="nav-link" href="index.html#whitepaper">Whitepaper</a>
 				  </li>
